--- a/sass/main.scss
+++ b/sass/main.scss
@@ -144,21 +144,25 @@ body {
     }
     
     .winning-message {
+        display: none;
         position: fixed;
         top: 0;
         left: 0;
         right: 0;
         bottom: 0;
         background-color: rgba(0, 0, 0, .9);
-        display: flex;
         justify-content: center;
         align-items: center;
         color: #fff;
         font-size: 5rem;
-        flex-direction: column-reverse;
+        flex-direction: column;
+
+        &.show {
+            display: flex
+        }
 
         div {
-            margin-top: 2rem;
+            margin-bottom: 1rem;
             text-shadow: 1px 1px 100px rgba($color: #fff, $alpha: 1);
         }
 
@@ -168,7 +172,7 @@ body {
             background-color: $primary-color;
             border: 1px solid black;
             padding: .25em .5em;
-            margin-bottom: 1rem;
+            margin-top: 2rem;
             outline: none;
             border-radius: 10px;
             cursor: pointer;
