--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,13 +21,12 @@ $primary-color: #e9e9e9;
 }
 
 :root {
-    --cell-size: 100px;
+    --cell-size: 80px;
     --mark-size: calc(var(--cell-size) * .9);
 }
 
 body {
     margin: 0;
-    padding: 0;
     background-color: $primary-color;
     color: #000;
     display: grid;
@@ -49,14 +48,20 @@ body {
             width: 200px;
             margin-top: .7rem;
             padding: 10px;
+            color: #494d4dfb;
+            font-family: cursive;
+            font-size: .8em;
+            b {
+                font-size: 1.09rem;
+            }
         }
     }
 
 
     .container {
         @include shadow;
-        width: 83vw;
-        height: 83vh;
+        width: 70vw;
+        height: 70vh;
         margin: 1rem 100px;
         padding: 10px;
         display: grid;
@@ -71,7 +76,7 @@ body {
         .cell {
             @include shadow;
             // @include text-shadow;
-            display: flex;
+            display: grid;
             justify-content: center;
             align-content: center;
             justify-items: center;
