--- a/sass/main.scss
+++ b/sass/main.scss
@@ -218,7 +218,6 @@ body {
     .site-footer {
         color: #645959;
         margin-top: 1px;
-        width: 35vw;
         font-size: 12px;
         line-height: 2px;
         font-family: monospace;
@@ -231,8 +230,7 @@ body {
             &:hover {
                 @include easeOut;
                 background-color: burlywood;
-                padding-right: 50px;
-                transition: padding-right .5s, background-color 1s;
+                transition: all background-color 1s;
             }
 
             a {
@@ -257,7 +255,7 @@ body {
             /* margin-bottom: 0; */
             list-style: none;
             margin-top: 20px;
-            transform: translate(-26%, -5%);
+            transform: translate(-15%, -10%);
 
             a {
                 box-shadow: 8px 8px 20px #2b2d3410,
@@ -314,29 +312,33 @@ body {
                 /* margin-bottom: 0; */
             }
         }
-    }
 
+        @media (max-width:991px) {
+            & [class^=col-] {
+                margin-bottom: 20px;
+            }
 
-    @media (max-width:991px) {
-        .site-footer [class^=col-] {
-            margin-bottom: 20px;
-        }
-    }
-
-    @media (max-width:767px) {
-        .social-icons li.title {
-            display: block;
-            margin-right: 0;
-            font-weight: 600;
+            & .social-icons {
+                transform: translate(-15%, -10%);
+            }
         }
 
-        .site-footer {
-            padding-bottom: 0;
-        }
+        @media (max-width:767px) {
 
-        .site-footer .copyright-text,
-        .site-footer .social-icons {
-            text-align: center;
+            & {
+                padding-bottom: 0;
+            }
+
+            & .social-icons {
+                transform: translate(0, -10%);
+            }
+
+            & .github-link,
+            & .social-icons {
+                text-align: center;
+                justify-content: center;
+                align-content: center;
+            }
         }
     }
 
