--- a/sass/main.scss
+++ b/sass/main.scss
@@ -334,7 +334,7 @@ body {
             }
 
             & .github-link {
-                width: 90vw;
+                width: 100%;
                 line-height: 2;
             }
 
